# 05-chat

./: .env  .gitignore  Cargo.toml  README.md  test.http  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: pkcs8.pem
chat_core/src/: error.rs  lib.rs
chat_core/src/middlewares/: jwt.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/models/: chat.rs  message.rs  mod.rs  users.rs  workspace.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  chat.yml
chat_server/fixtures/: dk.pem  ek.pem  test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  chat_file.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: chat_member.rs  jwt.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  chat_file.rs  message.rs  mod.rs  users.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  chat.yml
chat_test/tests/: chat.rs
migrations/: 20240710064202_initial.sql  20240721024553_workspace.sql  20240726124551_trigger.sql
notify_server/: Cargo.toml  index.html  notif.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: chat.rs  messages.rs  mod.rs
