[workspace]
members = ["chat_core",
    "chat_server", "chat_test",
    "notify_server"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing", "multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
jwt-simple = { version = "0.12.9", features = ["pure-rust"], default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
chat_core = { path = "./chat_core" }
chat_server = { path = "./chat_server" }
notify_server = { path = "./notify_server" }
