[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.120"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { workspace = true }
sha1 = "0.10.6"
tokio-util = "0.7.11"
mime_guess = "2.0.5"
chat_core = { workspace = true }

[dev-dependencies]
http-body-util = "0.1.2"
sqlx-db-tester = "0.4.2"
