[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dependencies]


[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat_core = { workspace = true }
chat_server = { workspace = true, features = ["test-util"] }
futures = { workspace = true }
notify_server = { workspace = true }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json", "multipart"] }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
