[package]
name = "notify_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chat_core = { workspace = true }
dashmap = "6.0.1"
futures = { workspace = true }
futures-util = "0.3.30"
jwt-simple = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
